[package]
name = "cat-gpt"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
envy = "0.4.2"
regex = "1.5.4"
openssl = { version = "0.10", features = ["vendored"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
aws-sdk-ssm = "1.9.0"
aws-config = "1.1.1"
futures = "0.3"
base64 = "0.22.1"
anyhow = "1.0.86"
thiserror = "1.0.63"
